--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.2.3",
+    "sequelize": "^6.31.0"
   }
 }
