--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
+    "nodemailer": "^6.9.1",
     "sequelize": "^6.31.0"
   }
 }
