--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "db:import": "node ./seed/seeder -i",
+    "db:delete": "node ./seed/seeder -d"
   },
   "author": "Walter Daniel Carrizo",
   "license": "ISC",
